Fixed error with css selector for label alignment
I was trying to assign a CSS property to
the form label when the form label doesn't
have a class attribute on it, so changed the
CSS selector to label instead of
.location-label.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,11 +34,9 @@ header {
     box-shadow: 4px 4px 20px 0px black;
 }
 
-
-.location-input {
+label {
     align-self: center;
 }
-
 
 .logo {
     font-size: 3rem;
